--- a/package.json
+++ b/package.json
@@ -2,27 +2,30 @@
   "name": "node-db3-challenge",
   "version": "1.0.0",
   "description": "Challenge for Node DB3 Module",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "dev": "ts-node-dev src/index.ts",
+    "knex:migrate:make": "knex -x ts migrate:make",
+    "knex:migrate:latest": "knex migrate:latest",
+    "knex:migrate:rollback": "knex migrate:rollback",
+    "knex:seed:make": "knex -x ts seed:make",
+    "knex:seed:run": "knex seed:run"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LambdaSchool/node-db3-challenge.git"
-  },
-  "keywords": [],
-  "author": "Lambda School",
-  "bugs": {
-    "url": "https://github.com/LambdaSchool/node-db3-challenge/issues"
-  },
-  "homepage": "https://github.com/LambdaSchool/node-db3-challenge#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "3.21.2",
     "knex": "^0.20.1",
-    "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "@types/express": "^4.17.1",
+    "@types/helmet": "^0.0.45",
+    "@types/node": "^12.11.7",
+    "@types/sqlite3": "^3.1.5",
+    "knex-cleaner": "^1.3.0",
+    "ts-node": "^8.4.1",
+    "ts-node-dev": "^1.0.0-pre.43",
+    "typescript": "^3.6.4"
   }
 }
